# aimeio-multi

./: meson.build
.github/workflows/: main.yml
aimeio/: aimeio.c
